FIX COMPASS_MAX = 2 (chưa test) + ƯU TIẾN TẤN CÔNG BẰNG VŨ KHÍ NHIỀU DMG -> COOLDOWN